# TidesTicTactics

./: Board.cpp  Board.h  CMakeLists.txt  Engine.cpp  Engine.h  ExampleCommunication - Kopie.in  ExampleCommunication2.in  IO.cpp  IO.h  Miniboard.cpp  Miniboard.h  MovetableGeneration.py  RatingTable.h  RatingtableGeneration.py  Transpositiontable.cpp  Transpositiontable.h  bitboards.cpp  bitboards.h  defs.cpp  defs.h  inits.h  main.cpp
